project-2-the-force/theLanguageEmporium/force-app/main/default/objects/Candidate_Education__c/fields/Candidate__c.field-meta.xml
<CustomField>
    <fullName>Candidate__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Candidate</label>
    <referenceTo>Candidate__c</referenceTo>
    <relationshipLabel>Candidate Education</relationshipLabel>
    <relationshipName>Candidate_Education</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>