project-2-the-force/theLanguageEmporium/force-app/main/default/objects/Candidate_Education__c/fields/Date_Of_Graduation__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_Graduation__c</fullName>
    <label>Date of Graduation</label>
    <type>Date</type>
</CustomField>