project-2-the-force/theLanguageEmporium/force-app/main/default/objects/Candidate_Education__c/fields/Date_Started__c.field-meta.xml
<CustomField>
    <fullName>Date_Started__c</fullName>
    <label>Date Started</label>
    <required>true</required>
    <type>Date</type>
</CustomField>