project-2-the-force/theLanguageEmporium/force-app/main/default/objects/Candidate_Education__c/fields/Degree__c.field-meta.xml
<CustomField>
    <fullName>Degree__c</fullName>
    <label>Degree</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Education</valueSetName>
    </valueSet>
</CustomField>