project-2-the-force/theLanguageEmporium/force-app/main/default/objects/Candidate_Education__c/fields/Graduated__c.field-meta.xml
<CustomField>
    <fullName>Graduated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Graduated?</label>
    <type>Checkbox</type>
</CustomField>