project-2-the-force/theLanguageEmporium/force-app/main/default/objects/Candidate_Education__c/fields/Major__c.field-meta.xml
<CustomField>
    <fullName>Major__c</fullName>
    <label>Major</label>
    <length>50</length>
    <type>Text</type>
</CustomField>