project-2-the-force/theLanguageEmporium/force-app/main/default/objects/Candidate_Education__c/fields/School__c.field-meta.xml
<CustomField>
    <fullName>School__c</fullName>
    <label>School</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>